--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap"); */
 
 :root {
   --color-primary: #ecf0f3;
@@ -16,10 +16,12 @@
   padding: 0;
 }
 
-/* html {
+html {
   font-size: 62.5%;
-} */
+}
 
 body {
-  font-family: "Rubik", sans-serif;
+  /* font-family: "Rubik", sans-serif; */
+  font-family: "Nunito", sans-serif;
+  font-size: 1.6rem;
 }
