--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -2,5 +2,10 @@
   display: flex;
   .homeContainer {
     flex: 6;
+    .widgets {
+      display: flex;
+      padding: 2rem;
+      gap: 2rem;
+    }
   }
 }
