Working on Chart Component

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -2,10 +2,14 @@
   display: flex;
   .homeContainer {
     flex: 6;
-    .widgets {
+    .widgets,
+    .charts {
       display: flex;
       padding: 2rem;
       gap: 2rem;
+    }
+    .charts {
+      padding: 5px 20px;
     }
   }
 }
