--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -9,7 +9,19 @@
       gap: 2rem;
     }
     .charts {
-      padding: 5px 20px;
+      padding: 0.5rem 2rem;
+    }
+    .listContainer {
+      -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
+      box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
+      padding: 2rem;
+      margin: 2rem;
+
+      .listTitle {
+        font-weight: 500;
+        color: gray;
+        margin-bottom: 1.5rem;
+      }
     }
   }
 }
