--- a/src/components/datatable/datatable.scss
+++ b/src/components/datatable/datatable.scss
@@ -55,7 +55,18 @@
         color: crimson;
       }
     }
-
+    .status {
+      padding: 0.2rem 0.8rem;
+      font-size: 1.2rem;
+      color: #fff;
+      border-radius: 5px;
+    }
+    .status-active {
+      background-color: rgba(0, 128, 0, 0.682);
+    }
+    .status-deactive {
+      background-color: rgba(255, 0, 0, 0.719);
+    }
     .cellAction {
       display: flex;
       align-items: center;
