Products List add

--- a/src/components/datatable/datatable.scss
+++ b/src/components/datatable/datatable.scss
@@ -24,7 +24,9 @@
         cursor: pointer;
       }
     }
-
+    .price {
+      color: gray;
+    }
     .cellWithImg {
       display: flex;
       align-items: center;
