--- a/src/components/datatable/datatable.scss
+++ b/src/components/datatable/datatable.scss
@@ -1,6 +1,20 @@
 .datatable {
   height: 60rem;
   padding: 2rem;
+  .heading {
+    color: #343;
+    font-size: 2.5rem;
+    margin-bottom: 2rem;
+  }
+  .pending-orders {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: green;
+    font-weight: bold;
+    font-size: 2rem;
+  }
   .datagrid {
     font-size: 1.3rem;
 
