--- a/src/index.css
+++ b/src/index.css
@@ -32,3 +32,8 @@ body {
   align-items: center;
   justify-content: center;
 }
+
+.shadow {
+  -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
+  box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
+}
