--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
   --gradient-box-w: linear-gradient(145deg, #e2e8ec, #ffffff);
   --shadow-white-3: 5px 5px 15px #d1d9e6, -5px -5px 15px #ffffff;
   --main-color: #ff014f;
+  --btn-bg: #913ae4;
 }
 
 * {
@@ -39,4 +40,17 @@ body {
 }
 button {
   cursor: pointer;
+}
+.submit {
+  background-color: var(--btn-bg);
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 1rem 2rem;
+  font-size: 1.4rem;
+  transition: all 0.3s;
+}
+
+.submit:hover {
+  opacity: 0.7;
 }
