--- a/src/components/datatable/datatable.scss
+++ b/src/components/datatable/datatable.scss
@@ -1,5 +1,5 @@
 .datatable {
-  height: 60rem;
+  height: 50rem;
   padding: 2rem;
   .heading {
     color: #343;
@@ -17,7 +17,9 @@
   }
   .datagrid {
     font-size: 1.3rem;
-
+    p {
+      font-size: 1.2rem;
+    }
     .datatableTitle {
       width: 100%;
       font-size: 2.4rem;
