--- a/src/components/info/userInfo.scss
+++ b/src/components/info/userInfo.scss
@@ -9,18 +9,21 @@
     position: absolute;
     top: 0;
     right: 0;
-    padding: 5px;
-    font-size: 12px;
+    padding: 5px 1.2rem !important;
+    font-size: 1.3rem;
     color: #7451f8;
     background-color: #7551f818;
     cursor: pointer;
     border-radius: 0px 0px 0px 5px;
   }
-
+  .title {
+    font-size: 1.8rem !important;
+  }
   .item {
     display: flex;
     gap: 2rem;
-
+    align-items: center;
+    justify-content: space-around;
     .itemImg {
       width: 100px;
       height: 100px;
