--- a/src/index.css
+++ b/src/index.css
@@ -41,16 +41,18 @@ body {
 button {
   cursor: pointer;
 }
-.submit {
+.submit,
+.btn {
   background-color: var(--btn-bg);
   color: white;
   border: none;
   border-radius: 5px;
-  padding: 1rem 2rem;
-  font-size: 1.4rem;
+  padding: 0.6rem 1.6rem;
+  font-size: 1.3rem;
   transition: all 0.3s;
 }
 
-.submit:hover {
+.submit:hover,
+.btn:hover {
   opacity: 0.7;
 }
