--- a/src/pages/list/list.scss
+++ b/src/pages/list/list.scss
@@ -3,5 +3,13 @@
   width: 100%;
   .listContainer {
     flex: 6;
+    .header {
+      display: flex;
+      padding: 2rem 2rem 0 2rem;
+      justify-content: space-between;
+      h3 {
+        font-size: 2.6rem;
+      }
+    }
   }
 }
