--- a/src/components/Other/createuser.scss
+++ b/src/components/Other/createuser.scss
@@ -6,6 +6,17 @@
   top: 20%;
   border-radius: 0.5rem;
   width: 60%;
+  .icon-close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    border-radius: 5px;
+    width: 2.6rem;
+    height: 2.4rem;
+    padding: 5px;
+    background-color: rgba(192, 192, 192, 0.432);
+    cursor: pointer;
+  }
   .create-user__form {
     display: flex;
     align-items: center;
@@ -14,10 +25,6 @@
     width: 100%;
     gap: 4rem;
     .input-img {
-      // display: flex;
-      // flex-direction: column;
-      // gap: 2rem;
-      // flex: 1;
       img {
         border-radius: 50%;
         // width: 80%;
@@ -38,7 +45,7 @@
       display: flex;
       flex-direction: column;
       gap: 4rem;
-      align-items: start;
+      align-items: flex-start;
       .radio-label {
         font-size: 1.2rem;
         margin-left: 6px;
