--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -75,4 +75,12 @@
       }
     }
   }
+  .switch {
+    border: none;
+    font-size: 1.2rem;
+    background-color: transparent;
+    // color: blueviolet;
+    color: #888;
+    text-decoration: none;
+  }
 }
