product stat chat added

--- a/src/components/chart/chart.scss
+++ b/src/components/chart/chart.scss
@@ -2,8 +2,9 @@
   flex: 4;
   -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
   box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
-  padding: 10px;
+  padding: 1rem;
   color: gray;
+  font-size: 1.1rem;
 
   .title {
     margin-bottom: 20px;
